--- a/configs/pfs-cp4ba-test1.properties
+++ b/configs/pfs-cp4ba-test1.properties
@@ -1,5 +1,5 @@
-PFS_NAME=pfs-demo-bastudio
-PFS_NAMESPACE=cp4ba
+PFS_NAME=pfs-demo
+PFS_NAMESPACE=cp4ba-test1
 PFS_STORAGE_CLASS=managed-nfs-storage
 PFS_APP_VER=23.0.2
 PFS_ADMINUSER="cp4admin"
