--- a/configs/pfs1.properties
+++ b/configs/pfs1.properties
@@ -2,3 +2,4 @@ PFS_NAME=pfs-demo
 PFS_NAMESPACE=cp4ba-demo-federated-wfps
 PFS_STORAGE_CLASS=managed-nfs-storage
 PFS_APP_VER=23.0.2
+PFS_ADMINUSER="cpadmin"
