--- a/configs/demo-wfps-baw.properties
+++ b/configs/demo-wfps-baw.properties
@@ -1,5 +1,5 @@
 CP4BA_INST_PFS_NAME=pfs-demo
-CP4BA_INST_PFS_NAMESPACE=cp4ba-pfs-wfps-baw-demo
+CP4BA_INST_PFS_NAMESPACE=cp4ba-pfs-demo # cp4ba-pfs-wfps-baw-demo
 CP4BA_INST_PFS_STORAGE_CLASS=managed-nfs-storage
 CP4BA_INST_PFS_APP_VER=23.0.2
 CP4BA_INST_PFS_ADMINUSER="cpadmin"
