--- a/output/pfs-demo.yaml
+++ b/output/pfs-demo.yaml
@@ -2,7 +2,7 @@ apiVersion: icp4a.ibm.com/v1
 kind: ProcessFederationServer
 metadata:
   name: pfs-demo
-  namespace: cp4ba-wfps-baw-pfs
+  namespace: cp4ba-wfps-prod
 spec:
   appVersion: "24.0.1"
   license:
@@ -10,8 +10,8 @@ spec:
   shared_configuration: 
     sc_deployment_license: production
     storage_configuration:
-      sc_medium_file_storage_classname: ibmc-vpc-file-retain-500-iops
-      sc_slow_file_storage_classname: ibmc-vpc-file-retain-500-iops
+      sc_medium_file_storage_classname: ocs-external-storagecluster-cephfs
+      sc_slow_file_storage_classname: ocs-external-storagecluster-cephfs
   pfs_configuration:
     admin_user_id:
       - cp4admin
